# Finch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  heat_equation_cajita.cpp
.github/workflows/: CI.yml  Weekly.yml
applications/: CMakeLists.txt  SingleLayer.cpp
cmake/: FinchConfig.cmakein
examples/: CMakeLists.txt  README.md  inputs.yaml  main.cpp  simulation.hpp
examples/create_scan_path/: inputs.json  inputs.yaml  run_example.sh
examples/scanPaths/: raster.txt  single_line.txt
examples/single_line/: inputs.json  inputs.yaml  inputs_small.json  inputs_small_refined.json  run_example.sh  run_example_small.sh
movingBeam/: CMakeLists.txt  movingBeam.C  moving_beam.cpp  moving_beam.hpp  segment.C  segment.H  segment.cpp  segment.hpp
solvers/: CMakeLists.txt  main.cpp
src/: Boundary.hpp  CMakeLists.txt  Finch_Boundary.hpp  Finch_Core.hpp  Finch_Core_Config.hpp.cmakein  Finch_Grid.hpp  Finch_Inputs.hpp  Finch_Run.hpp  Finch_SolidificationData.hpp  Finch_Solver.hpp  Finch_Version.hpp  Grid.hpp  Inputs.hpp  Simulation.hpp  SolidificationData.hpp  Solver.hpp  grid.hpp  simulation.hpp  solidificationData.hpp
src/MovingBeam/: Finch_MovingBeam.cpp  Finch_MovingBeam.hpp  Finch_Segment.cpp  Finch_Segment.hpp  MovingBeam.cpp  MovingBeam.hpp  Segment.cpp  Segment.hpp
src/movingBeam/: moving_beam.cpp  moving_beam.hpp  segment.cpp  segment.hpp
utilities/: CMakeLists.txt  combine_solidification_data.sh
utilities/CreateScanPaths/: CMakeLists.txt  CreateScanPaths.cpp  CreateScanPaths.hpp  Finch_CreateScanPaths.cpp  Finch_CreateScanPaths.hpp
utilities/rotate_scan_paths/: CMakeLists.txt  inputs.yaml  rotate_scan_paths.cpp  rotate_scan_paths.hpp
utils/: combine_solidification_data.sh
